--- a/local_static/css/base.css
+++ b/local_static/css/base.css
@@ -4,7 +4,7 @@
   padding-right: calc(1rem + 1vw);
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 
 .navbar .navbar-nav .nav-item {
@@ -134,7 +134,7 @@
     padding: 0 calc(0.5rem + 0.5vw);
     position: fixed;
     top: 12vh;
-    z-index: 1;
+    z-index: 2;
   }
   .nav-call-now .nav-call-now-button .icon-phone {
     height: 2rem;
@@ -176,7 +176,7 @@
     padding: 0 calc(0.5rem + 0.5vw);
     position: fixed;
     top: 12vh;
-    z-index: 1;
+    z-index: 2;
   }
   .nav-free-quote .nav-free-quote-button:focus {
     background-color: #00AEEF;
